Add Display Property Project

--- a/css1/style.css
+++ b/css1/style.css
@@ -8,6 +8,14 @@ body {
     margin: 0 auto;
     padding-top: 10px;
     padding-bottom: 10px;
+    animation: ingredients;
+    animation-duration: 3s;
+    position: relative;
+
+}
+@keyframes ingredients {
+    0%{top: -250px;}
+    100%{top: 0;}
 }
 
 .koostisosad-table{
@@ -15,7 +23,14 @@ body {
     margin: 0 auto;
     color: white;
     font-family: 'Anton', sans-serif;
+    animation: koostisosad;
+    animation-duration: 3s;
+    position: relative;
 
+}
+@keyframes koostisosad {
+    0%{left: -250px;}
+    100%{left: 0;}
 }
 
 .valmistamine {
@@ -24,9 +39,14 @@ body {
     margin: 0 auto;
     color: yellow;
     font-family: 'Dancing Script', cursive;
-
+    animation: valmistamine;
+    animation-duration: 3s;
+    position: relative;
 }
-
+@keyframes valmistamine {
+    0%{left: -1000px;}
+    100%{left: 0;}
+}
 .pealkiri {
     color: blue;
     width: 50%;
@@ -37,8 +57,15 @@ body {
     padding-left: 470px;
     width: 300px;
     padding-top: 10px;
+    animation: pasta;
+    animation-duration: 5s;
+    position: relative;
 }
 
+@keyframes pasta {
+   0% {opacity: 0;} 
+   100%{opacity: 1;}
+}
 
 
 
